<resources>
    <string name="app_name">ServiceDesk</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="logout_msg">Are you sure you want to Logout?</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>

    <string name="category">Category</string>
    <string name="impact">Impact</string>
    <string name="impact_service">Impact Service</string>
    <string name="urgency">Urgency</string>
    <string name="priority">Priority</string>
    <string name="summary">Summary</string>
    <string name="description">Description</string>
    
    <string name="state">State</string>
    <string name="status">Status</string>

    <string name="requester_details">Requester Details</string>
    <string name="details">Details</string>
    <string name="asset_details">Assets Details</string>
    <string name="incident_details">Incident Details</string>
    <string name="resolution_details">Resolution Details</string>
    
    <string name="symptom">Symptom</string>
    <string name="resolution">Resolution</string>
    <string name="root_cause">Root Cause</string>
    <string name="trouble_reason">Trouble Reason</string>
    <string name="recovery_action">Recovery Action</string>
    <string name="classification">Classification</string>

    <string name="display_id">Item ID</string>
    <string name="inventory_id">Inventory Id</string>
    <string name="criticality">Criticality</string>
    <string name="item_type">Item Type</string>

    <string name="Search_query_hint">Requester/Item Search</string>
    <string name="req_name">Requester Name</string>
    <string name="req_phone">Phone No</string>
    <string name="req_mail">Email ID</string>

    <string name="item_asset">Item Assets</string>
    <string name="item_class_label">Class : </string>
    <string name="item_type_label">Item Type :</string>
    <string name="item_inventory_label">Inventory Id : </string>
    <string name="item__barcode_label">Bar Code : </string>
    <string name="item_qrcode_label">QR Code : </string>


</resources>
